# open-foam-module

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  REFERENCE.md  TUTORIAL.md  install_trufflehog.py  module_config.json  module_manifest.json  openfoam_module.spec  pyproject.toml
.github/workflows/: release.yml
docs/: functions.md
docs/plans/: 2026-03-03-linux-binary-build-deploy-test.md  2026-03-03-linux-binary-build-test-design.md
hooks/: hook-module.functions.py
module/: __init__.py  __main__.py  logging_config.py  module_config.py
module/functions/: __init__.py  extract_foam.py  inspect_patch_foam.py  model_params_to_artifacts_no_auth.py  registry.py  run_foam.py
module/functions/base/: __init__.py  function_io.py
module/services/: foam_utils.py  foam_viz.py
prototypes/: foam_job_spec.json  module_manifest.json  multipass.md
schemas/: inputs_schema.json
scripts/linux/: build.sh  clean.sh  create_fixture.sh  install.sh  test_unit.sh
scripts/windows/: build.ps1  clean.ps1  install.ps1  test_unit.ps1
test_files/: input.json  inspect_foam_input.json  patch_foam_input.json  run_foam_input.json
tests/: __main__test.py  logging_config_test.py
tests/configuration/: module_config_test.py
tests/functions/: __init__.py  foam_utils_test.py  function_factory_test.py  model_params_to_artifacts_no_auth_test.py  test_extract_foam.py  test_run_foam.py
tests/integration/: test_extract_foam.py  test_inspect_foam.py  test_patch_foam.py  test_run_foam.py
tests/integration/fixtures/: inspect_input.json
tests/services/: test_foam_viz.py
